--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='75' font-size='75'>⚡</text></svg>">
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6V0JYKBHSP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-6V0JYKBHSP');
+    </script>
+    
     <!-- Schema.org Structured Data -->
     <script type="application/ld+json">
     {
@@ -838,7 +847,7 @@
                     </svg>
                     Get Started Free
                 </a>
-                <a href="#how-it-works" class="secondary-button">See How It Works</a>
+                <a href="https://github.com/marketplace/lightning-runner" class="secondary-button">View on GitHub Marketplace</a>
             </div>
         </div>
     </section>
