--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
       gtag('js', new Date());
       gtag('config', 'G-6V0JYKBHSP');
     </script>
+
+    <!-- Add these to your <head> section -->
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://lightningrunner.net/">
+    <meta name="author" content="Lightning Runner">
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lightning Runner - Enterprise GitHub Actions Runners | 85% Cheaper, 10x Faster</title>
+    <title>Lightning Runner - 85% Cheaper GitHub Actions Runners | 10-Second Startup</title>
+   
     <meta name="description" content="Lightning-fast GitHub Actions runners on decentralized infrastructure. Start CI/CD jobs in under 10 seconds. Free 3,000 minutes/month. No configuration required.">
     <meta name="keywords" content="GitHub Actions runners, self-hosted runners, CI/CD, continuous integration, DevOps, cheap GitHub runners, fast CI/CD">
     
